--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,21 @@
 
+🧪 Test driven development
 
+    Absolute paths
 
+        TODO Make Jest recognize absolute paths in .spec tests 
+
+    Create service tests
+
+         📁 Users:
+
+            TODO user.service.spec.ts 
+            
+        📁 Tasks:
+
+            TODO task.service.spec.ts 
+
+          
 📜 Swagger API DOCS
 
     JWT Swagger integration
