feat: user and task service

--- a/TODO.txt
+++ b/TODO.txt
@@ -13,11 +13,11 @@
 
          📁 Users:
 
-            TODO user.service.spec.ts 
+            user.service.spec.ts  ✅
             
         📁 Tasks:
 
-            TODO task.service.spec.ts 
+            task.service.spec.ts  ✅
 
           
 📜 Swagger API DOCS
