--- a/TODO.txt
+++ b/TODO.txt
@@ -1,72 +1,13 @@
 
-🗃️ General 
+ 📋 Tasks domain 
 
-    ✅ Refactor every path to be absolute
+   TODO Refactor every flow to have a teamId property 
 
-🧪 Test driven development
+ 📋 TDD
 
-    Absolute paths
-
-        Make Jest recognize absolute paths in .spec tests ✅
-
-    Create service tests
-
-         📁 Users:
-
-            user.service.spec.ts  ✅
-            
-        📁 Tasks:
-
-            task.service.spec.ts  ✅
-
-          
-📜 Swagger API DOCS
-
-    JWT Swagger integration
-
-        Add JWT for Bearer authentication token in swagger http://localhost:3003/api/docs  ✅
-
-    Add appropriate body response in Swagger
-
-       📁 Users:
-
-             POST /users/signup  ✅
-             PUT  /users ✅
-             POST /users/login ✅
-             GET /users/paginated ✅
-             GET /users/find-by-id ✅
-             GET /users/me ✅
-
-        📁 Tasks:
-
-            POST /tasks/create  ✅
-            PUT /tasks  ✅
-            GET /tasks/paginated  ✅
-            GET /tasks/find-by-id  ✅
-            DELETE /tasks/delete  ✅
-
+   TODO All tasks TDD passing
+   ✅ mongodb-user-team-repository.spec 
+   ✅ mongodb-team-repository.spec
+   ✅ team.service.spec
+   ✅ user-team.service.spec
    
-        
-    Separate each ENDPOINT in its correct group of routes Tags:
-
-        User controller ✅
-        Task controller ✅
-
-    Add correct body request for each routes:
-    
-        📁 Users:
-
-            POST /users/signup  ✅
-            PUT  /users ✅
-            POST /users/login ✅
-            GET /users/paginated ✅
-            GET /users/find-by-id ✅
-            GET /users/me ✅
-
-        📁 Tasks:
-
-            POST /tasks/create  ✅
-            PUT /tasks  ✅
-            GET /tasks/paginated  ✅
-            GET /tasks/find-by-id  ✅
-            DELETE /tasks/delete  ✅
